notes.txt
..\..\b2 test toolset=gcc cxxstd=17
..\..\b2 test toolset=clang-win cxxstd=17












● Bash(/d/boost/b2.exe test toolset=clang-win cxxstd=17 2>&1 | grep -E "error:|warning:" | grep -v "failed-as-expected" | head -20)
  ⎿  D:\boost\libs\openmethod\test\dynamic_loading\main.cpp(75,28): error: no member named 'directory_iterator' in namespace 'boost::filesystem'; did you mean 'boost_swap_impl::_Vector_iterator'?
     ..\..\boost/dynamic_bitset/detail/dynamic_bitset.hpp(76,31): error: shift count >= width of type [-Werror,-Wshift-count-overflow]
  ⎿  (timeout 5m)

● Bash(/d/boost/b2.exe test toolset=clang-win cxxstd=17 2>&1 | grep -A 5 "dynamic_bitset")
  ⎿  In file included from ..\..\boost/dynamic_bitset.hpp:15:
     In file included from ..\..\boost/dynamic_bitset/dynamic_bitset.hpp:23:
     ..\..\boost/dynamic_bitset/detail/dynamic_bitset.hpp(76,31): error: shift count >= width of type [-Werror,-Wshift-count-overflow]
        76 |                         : ( v >>= BOOST_DYNAMIC_BITSET_WRAP_CONSTANT( amount ) );
           |                               ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     ..\..\boost/dynamic_bitset/impl/dynamic_bitset.ipp(2129,29): note: in instantiation of member function 'boost::detail::dynamic_bitset_impl::shifter<unsigned long, 32, 32>::left_shift' requested here
      2129 |     for ( ; value; shifter::left_shift( value ), ++it ) {
           |                             ^
     ..\..\boost/dynamic_bitset/impl/dynamic_bitset.ipp(484,5): note: in instantiation of member function 'boost::dynamic_bitset<>::init_from_unsigned_long' requested here
       484 |     init_from_unsigned_long( num_bits, value );
           |     ^
     ..\..\boost/openmethod/initialize.hpp(1215,20): note: in instantiation of member function 'boost::dynamic_bitset<>::dynamic_bitset' requested here
      1215 |             bitvec all(m.overriders.size());
           |                    ^
     ..\..\boost/openmethod/initialize.hpp(573,5): note: in instantiation of member function 'boost::openmethod::registry<boost::openmethod::policies::std_rtti, boost::openmethod::policies::fast_perfect_hash, boost::openmethod::policies::vptr_vector,
     boost::openmethod::policies::default_error_handler, boost::openmethod::policies::stderr_output, boost::openmethod::policies::declspec<boost::openmethod::default_registry>>::compiler<>::build_dispatch_tables' requested here
       573 |     build_dispatch_tables();
           |     ^
     --
          "C:\Program Files\LLVM\bin\clang-cl.exe" --target=x86_64-pc-windows-msvc "D:\boost\libs\openmethod\test\dynamic_loading\main.cpp" -c
     -Fo"..\..\bin.v2\libs\openmethod\test\dynamic_loading\dynamic_loading.test\clang-win-22.1.3\debug\x86_64\cxxstd-17-iso\threading-multi\main.obj"     -TP /EHs /std:c++17 /GR /Z7 /Od /Ob0 /W4 /WX /MDd -DBOOST_ALL_NO_LIB=1 -DBOOST_ATOMIC_DYN_LINK=1 -DBOOST_ATOMIC_NO_LIB=1
     -DBOOST_EXCEPTION_NO_LIB=1 -DBOOST_FILESYSTEM_DYN_LINK=1 -DBOOST_FILESYSTEM_NO_LIB=1 -DBOOST_TEST_DYN_LINK=1 -DBOOST_TEST_NO_LIB=1 "-I..\.." "-I..\..\libs\config\include" "-ID:\boost\libs\algorithm\include" "-ID:\boost\libs\align\include" "-ID:\boost\libs\array\include"
     "-ID:\boost\libs\assert\include" "-ID:\boost\libs\atomic\include" "-ID:\boost\libs\bind\include" "-ID:\boost\libs\concept_check\include" "-ID:\boost\libs\container_hash\include" "-ID:\boost\libs\conversion\include" "-ID:\boost\libs\core\include"
     "-ID:\boost\libs\describe\include" "-ID:\boost\libs\detail\include" "-ID:\boost\libs\dll\include" "-ID:\boost\libs\dynamic_bitset\include" "-ID:\boost\libs\exception\include" "-ID:\boost\libs\filesystem\include" "-ID:\boost\libs\function\include"
     "-ID:\boost\libs\function_types\include" "-ID:\boost\libs\functional\include" "-ID:\boost\libs\fusion\include" "-ID:\boost\libs\io\include" "-ID:\boost\libs\iterator\include" "-ID:\boost\libs\mp11\include" "-ID:\boost\libs\mpl\include"
     "-ID:\boost\libs\numeric\conversion\include" "-ID:\boost\libs\openmethod\include" "-ID:\boost\libs\optional\include" "-ID:\boost\libs\predef\include" "-ID:\boost\libs\preprocessor\include" "-ID:\boost\libs\range\include" "-ID:\boost\libs\regex\include"
     "-ID:\boost\libs\scope\include" "-ID:\boost\libs\smart_ptr\include" "-ID:\boost\libs\static_assert\include" "-ID:\boost\libs\system\include" "-ID:\boost\libs\test\include" "-ID:\boost\libs\throw_exception\include" "-ID:\boost\libs\tuple\include"
     "-ID:\boost\libs\type_index\include" "-ID:\boost\libs\type_traits\include" "-ID:\boost\libs\typeof\include" "-ID:\boost\libs\unordered\include" "-ID:\boost\libs\utility\include" "-ID:\boost\libs\variant2\include" "-ID:\boost\libs\winapi\include"

     C:\Users\jl>"C:\Program Files\LLVM\bin\clang-cl.exe" --version
clang version 22.1.3 (https://github.com/llvm/llvm-project e9846648fd6183ee6d8cbdb4502213fcf902a211)
Target: x86_64-pc-windows-msvc
Thread model: posix
InstalledDir: C:\Program Files\LLVM\bin




"clang++"   -std=c++17 -fvisibility-inlines-hidden -fPIC -O0 -fno-inline -Wall -Wextra -Werror -g -fvisibility=hidden -m64 --target=arm64-apple-darwin  -DBOOST_ALL_NO_LIB=1 -DBOOST_ATOMIC_DYN_LINK=1 -DBOOST_ATOMIC_NO_LIB=1 -DBOOST_FILESYSTEM_DYN_LINK=1 -DBOOST_FILESYSTEM_HAS_DIRENT_D_TYPE -DBOOST_FILESYSTEM_HAS_FDOPENDIR_NOFOLLOW -DBOOST_FILESYSTEM_HAS_INIT_PRIORITY -DBOOST_FILESYSTEM_HAS_POSIX_AT_APIS -DBOOST_FILESYSTEM_HAS_STAT_ST_BIRTHTIMESPEC -DBOOST_FILESYSTEM_HAS_STAT_ST_MTIMESPEC -DBOOST_FILESYSTEM_NO_CXX20_ATOMIC_REF -DBOOST_FILESYSTEM_SOURCE   -I"." -I"/Users/runner/work/openmethod/boost-root/libs/align/include" -I"/Users/runner/work/openmethod/boost-root/libs/assert/include" -I"/Users/runner/work/openmethod/boost-root/libs/atomic/include" -I"/Users/runner/work/openmethod/boost-root/libs/bind/include" -I"/Users/runner/work/openmethod/boost-root/libs/compat/include" -I"/Users/runner/work/openmethod/boost-root/libs/concept_check/include" -I"/Users/runner/work/openmethod/boost-root/libs/container_hash/include" -I"/Users/runner/work/openmethod/boost-root/libs/core/include" -I"/Users/runner/work/openmethod/boost-root/libs/describe/include" -I"/Users/runner/work/openmethod/boost-root/libs/detail/include" -I"/Users/runner/work/openmethod/boost-root/libs/filesystem/include" -I"/Users/runner/work/openmethod/boost-root/libs/filesystem/src" -I"/Users/runner/work/openmethod/boost-root/libs/function/include" -I"/Users/runner/work/openmethod/boost-root/libs/function_types/include" -I"/Users/runner/work/openmethod/boost-root/libs/functional/include" -I"/Users/runner/work/openmethod/boost-root/libs/fusion/include" -I"/Users/runner/work/openmethod/boost-root/libs/io/include" -I"/Users/runner/work/openmethod/boost-root/libs/iterator/include" -I"/Users/runner/work/openmethod/boost-root/libs/mp11/include" -I"/Users/runner/work/openmethod/boost-root/libs/mpl/include" -I"/Users/runner/work/openmethod/boost-root/libs/optional/include" -I"/Users/runner/work/openmethod/boost-root/libs/predef/include" -I"/Users/runner/work/openmethod/boost-root/libs/preprocessor/include" -I"/Users/runner/work/openmethod/boost-root/libs/scope/include" -I"/Users/runner/work/openmethod/boost-root/libs/smart_ptr/include" -I"/Users/runner/work/openmethod/boost-root/libs/system/include" -I"/Users/runner/work/openmethod/boost-root/libs/throw_exception/include" -I"/Users/runner/work/openmethod/boost-root/libs/tuple/include" -I"/Users/runner/work/openmethod/boost-root/libs/type_traits/include" -I"/Users/runner/work/openmethod/boost-root/libs/typeof/include" -I"/Users/runner/work/openmethod/boost-root/libs/utility/include" -I"/Users/runner/work/openmethod/boost-root/libs/variant2/include" -I"/Users/runner/work/openmethod/boost-root/libs/winapi/include" -I"libs/config/include"  -c -o "bin.v2/libs/filesystem/build/clang-darwin-20/debug/arm_64/cxxstd-17-iso/threading-multi/visibility-hidden/directory.o" "/Users/runner/work/openmethod/boost-root/libs/filesystem/src/directory.cpp"
